[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/blackhole.png" type="Texture" id=1]
[ext_resource path="res://Game/BlackHole.gd" type="Script" id=2]
[ext_resource path="res://Sounds/swoosh.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 30.0

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0.763636 ), 0.0, 0.0, 0, 0, Vector2( 0.63745, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.583333, 0.925439, 1 )
colors = PoolColorArray( 0.768627, 0.768627, 0, 1, 0.95332, 0.155074, 0, 1, 1, 0, 0, 1 )

[node name="BlackHole" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SpriteBack" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Radiation" type="CPUParticles2D" parent="."]
amount = 64
lifetime = 3.0
preprocess = 12.0
speed_scale = 0.25
randomness = 1.0
direction = Vector2( 1, 1 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 45.8
damping = 20.0
damping_random = 1.0
scale_amount = 2.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 2 )
color_ramp = SubResource( 3 )

[node name="ShakeTimer" type="Timer" parent="."]
one_shot = true

[node name="SwooshSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -24.0
pitch_scale = 0.75
